ncc/testsuite/positive/Issue-1302.n
public class A
{
  public this()
  {
    InitValueOut(out _i, 1);
  }

  InitValueOut(v : out int, value : int) : void { v = value }

  private _i : int;
}

module Program
{
  Main() : void { }
}

/*
BEGIN-OUTPUT
END-OUTPUT
*/
