ncc/testsuite/negative/no-default-ctor.n
public class A
{
  public this (_ : int) {  }
}

public class B : A // E: the type `B' has no constructors
{
  static Main () : void {}
}
